# types

./: .envrc  CHANGELOG.md  flake.nix  types.cabal
app/: Main.hs
src/: Expression.hs  Lexer.x  Parser.y  Prelude.hs  SrcLoc.hs  StringBuffer.hs  Token.hs
src/Monad/: Parser.hs
